compiler/actonc/test/syntaxerrors/err4.golden
Building file test/syntaxerrors/err4.act using temporary scratch directory

ERROR: Error when compiling err4 module: Syntax error

test/syntaxerrors/err4.act:2:14:
  |
2 |     return x+pass
  |              ^^^^^
unexpected "pass<newline>"
expecting atomic expression or unary operator

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

